--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -6,6 +6,42 @@
   display: block;
 }
 
+body {
+  font-family: "Montserrat", sans-serif;
+}
+
+.font-roboto {
+  font-family: "Roboto", sans-serif;
+  color: #535353;
+}
+
+.tnav-shadow {
+  box-shadow: -4px -5px 10px rgba(0, 0, 0, 0.04),
+    4px 10px 20px rgba(0, 0, 0, 0.07);
+}
+
+.tcard-shadow {
+  box-shadow: 4px 0px 20px rgba(0, 0, 0, 0.05),
+    -4px 10px 20px rgba(0, 0, 0, 0.05);
+}
+
+.border-3-green {
+  background-color: #109d58;
+  border: 2px solid #109d58;
+}
+
+.border-6-green {
+  background-color: #109d58;
+  border: 6px solid #109d58;
+  border-radius: 50%;
+}
+
+.border-3-blue {
+  border-radius: 3px 3px 0 0;
+  background-color: #4385f3;
+  border: 3px solid #4385f3;
+}
+
 .navicon {
   width: 1.125em;
   height: 0.125em;
@@ -53,4 +89,16 @@
 .menu-btn:checked ~ .menu-icon .navicon::before,
 .menu-btn:checked ~ .menu-icon .navicon::after {
   top: 0;
+}
+
+.bg-bluegreen-gradient {
+  background: linear-gradient(
+    93.29deg,
+    #4385f3 0%,
+    rgba(16, 157, 88, 0.84) 97.28%
+  );
+}
+
+#team-card:hover > #team-icons {
+  color: #2b2b2b;
 }
