--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -714,7 +714,7 @@ body{
 
 .info .about .content_box{
     width: calc(90% - 10px);
-    min-height: 450px ;
+    min-height: 500px ;
 }  
 
 .info .about .about_img{
@@ -731,7 +731,7 @@ body{
 
 .info .vision .vision_img{
     top: -25%;
-    left: 0%;
+    left: -5%;
     width: 400px;
 }
 
@@ -744,7 +744,7 @@ body{
 .info .vision .content_box{
     width: calc(90% - 10px);
     position: relative;
-    min-height: 450px;
+    min-height: 500px;
     margin: 0 auto;
 
 }
@@ -770,7 +770,47 @@ body{
 
 }
 
-@media screen and (max-width:400px){
+@media screen and (max-width:500px){
+        
+            /* DOTS */
+        
+            .dots_box  .dots{
+                width: 13px;
+                height: 13px;
+                margin: 2px;
+            }
+        
+            .info .about .dots_box{
+                bottom: 2%;
+                left: 10%;
+            }
+        
+            .info .vision .dots_box{
+                top: 1%;
+                left: 76.5%;
+                z-index: 1;
+            }
+
+
+            .info .about .content_box .content,
+            .info .vision .content_box .content{
+                font-size: 16px;
+                padding: 20px;
+                /* border: 1px solid red; */
+            
+            }
+            .info .vision .vision_img{
+                top: -20%;
+                left: -5%;
+                width: 350px;
+                height: auto;
+                z-index: 1;
+            }
+        
+
+    }
+
+@media screen and (max-width:420px){
 
     
     
@@ -895,9 +935,9 @@ body{
     }
     
     .info .vision .vision_img{
-        top: -10%;
-        left: -5%;
-        width: 200px;
+        top: -18%;
+        left: -6%;
+        width: 250px;
         height: auto;
         z-index: 1;
     }
@@ -937,7 +977,7 @@ body{
     
         .info .vision .dots_box{
             top: 1%;
-            left: 75%;
+            left: 77%;
             z-index: 1;
         }
     
