--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -2,103 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
-#menu-toggle:checked + #menu {
-  display: block;
-}
-
 body {
   font-family: "Montserrat", sans-serif;
-}
-
-.font-roboto {
-  font-family: "Roboto", sans-serif;
-  color: #535353;
-}
-
-.tnav-shadow {
-  box-shadow: -4px -5px 10px rgba(0, 0, 0, 0.04),
-    4px 10px 20px rgba(0, 0, 0, 0.07);
-}
-
-.tcard-shadow {
-  box-shadow: 4px 0px 20px rgba(0, 0, 0, 0.05),
-    -4px 10px 20px rgba(0, 0, 0, 0.05);
-}
-
-.border-2-green {
-  background-color: #109d58;
-  border: 2px solid #109d58;
-}
-
-.border-6-green {
-  background-color: #109d58;
-  border: 6px solid #109d58;
-  border-radius: 50%;
-}
-
-.border-2-blue {
-  border-radius: 3px 3px 0 0;
-  background-color: #4385f3;
-  border: 2px solid #4385f3;
-}
-
-.navicon {
-  width: 1.125em;
-  height: 0.125em;
-}
-
-.navicon::before,
-.navicon::after {
-  display: block;
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  transition: all 0.2s ease-out;
-  content: "";
-  background: #ffff;
-}
-
-.navicon::before {
-  top: 5px;
-}
-
-.navicon::after {
-  top: -5px;
-}
-
-.menu-btn:not(:checked) ~ .menu {
-  display: none;
-}
-
-.menu-btn:checked ~ .menu {
-  display: block;
-}
-
-.menu-btn:checked ~ .menu-icon .navicon {
-  background: transparent;
-}
-
-.menu-btn:checked ~ .menu-icon .navicon::before {
-  transform: rotate(-45deg);
-}
-
-.menu-btn:checked ~ .menu-icon .navicon::after {
-  transform: rotate(45deg);
-}
-
-.menu-btn:checked ~ .menu-icon .navicon::before,
-.menu-btn:checked ~ .menu-icon .navicon::after {
-  top: 0;
-}
-
-.bg-bluegreen-gradient {
-  background: linear-gradient(
-    93.29deg,
-    #4385f3 0%,
-    rgba(16, 157, 88, 0.84) 97.28%
-  );
-}
-
-#team-card:hover > #team-icons {
-  color: #2b2b2b;
+  padding: 0;
+  margin: 0;
 }
