--- a/src/pages/Contact.css
+++ b/src/pages/Contact.css
@@ -525,5 +525,9 @@
         height: 200px;
         overflow: hidden;
     }
+    .submit{
+        width: 10rem;
+        height: 2rem;
+    }
     
 }
