--- a/src/pages/Contact.css
+++ b/src/pages/Contact.css
@@ -48,104 +48,6 @@
     /* border: 1px soid rgb(0, 255, 136); */
 
 }
-.blue2{
-    position: absolute;
-    top: 60%;
-    left: 40%;
-    width: 18px;
-    height: 18px;
-    opacity: 60%;
-    overflow: hidden;
-}
-.red2{
-    position: absolute;
-    top: 38%;
-    left: 9%;
-    width: 18px;
-    height: 18px;
-    opacity: 60%;
-    overflow: hidden;   
-}
-.red3{
-    position: absolute;
-    top: 111%;
-    left: 40%;
-    width: 30px;
-    height: 30px;
-    opacity: 60%;
-    overflow: hidden;  
-}
-.green1{
-    position: absolute;
-    top: 83%;
-    left: 75%;
-    width: 20px;
-    height: 20px;
-    overflow: hidden;
-}
-.red1{
-    position: absolute;
-    top: 80%;
-    left: 42px;
-    width: 15px;
-    height: 15px;
-    opacity: 50%;
-    overflow: hidden;
-}
-.blue1{
-    position: absolute;
-    top: 39%;
-    left : 75%;
-    width: 30px;
-    height: 30px;
-    opacity: 50%;
-    overflow: hidden;
-}
-.blueR{
-    position: absolute;
-    top: 75.5%;
-    left : 46%;
-    width: 19px;
-    height: 19px;
-    opacity: 30%;
-    overflow: hidden;
-}
-.greenR{
-    position: absolute;
-    top: 54%;
-    left : 78%;
-    width: 20px;
-    height: 20px;
-    opacity: 30%;
-    overflow: hidden;
-}
-.yellowR1{
-    position: absolute;
-    top: 40%;
-    left : 50%;
-    width: 18px;
-    height: 18px;
-    opacity: 50%;
-    overflow: hidden;
-}
-.yellowR2{
-    position: absolute;
-    top: 87%;
-    left : 7.5%;
-    width: 20px;
-    height: 20px;
-    opacity: 30%;
-    overflow: hidden;
-}
-.yellowR3{
-    position: absolute;
-    top: 105%;
-    left : 65%;
-    width: 20px;
-    height: 20px;
-    opacity: 30%;
-    overflow: hidden;
-}
 .greenR-d{
     position: absolute;
     top: 81%;
@@ -179,225 +81,6 @@
     height: 25px;
     overflow: hidden;
 }
-.blue1d{
-    position: absolute;
-    top: 58%;
-    left : 85%;
-    width: 25px;
-    height: 25px;
-    opacity: 60%;
-    overflow: hidden;
-}
-.blue2d{
-    position: absolute;
-    top: 145%;
-    left : 55%;
-    width: 25px;
-    height: 25px;
-    opacity: 60%;
-    overflow: hidden;
-}
-.blue3d{
-    position: absolute;
-    top: 152%;
-    left : 80%;
-    width: 25px;
-    height: 25px;
-    opacity: 60%;
-    overflow: hidden;
-}
-.blue4d{
-    position: absolute;
-    top: 48%;
-    left : 6%;
-    width: 25px;
-    height: 25px;
-    opacity: 50%;
-    overflow: hidden;
-}
-.blue5d{
-    position: absolute;
-    top: 147%;
-    left : 10%;
-    width: 20px;
-    height: 20px;
-    opacity: 50%;
-    overflow: hidden;
-}
-.blue6d{
-    position: absolute;
-    top: 120%;
-    left : 5%;
-    width: 20px;
-    height: 20px;
-    opacity: 50%;
-    overflow: hidden;
-}
-.blue7d{
-    position: absolute;
-    top: 75%;
-    left : 5%;
-    width: 12px;
-    height: 12px;
-    opacity: 50%;
-    overflow: hidden;
-}
-.blue8d{
-    position: absolute;
-    top: 68%;
-    left : 47%;
-    width: 10px;
-    height: 10px;
-    opacity: 50%;
-    overflow: hidden;
-}
-.blue9d{
-    position: absolute;
-    top: 95%;
-    left : 35%;
-    width: 12px;
-    height: 12px;
-    opacity: 50%;
-    overflow: hidden;
-}
-.blue10d{
-    position: absolute;
-    top: 151%;
-    left : 22%;
-    width: 10px;
-    height: 10px;
-    opacity: 50%;
-    overflow: hidden;
-}
-.blue11d{
-    position: absolute;
-    top: 148%;
-    left : 28%;
-    width: 10px;
-    height: 10px;
-    opacity: 50%;
-    overflow: hidden;
-}
-.blue12d{
-    position: absolute;
-    top: 142%;
-    left : 34%;
-    width: 10px;
-    height: 10px;
-    opacity: 50%;
-    overflow: hidden;
-}
-.green1d{
-    position: absolute;
-    top: 128%;
-    left : 92%;
-    width: 25px;
-    height: 25px;
-    opacity: 50%;
-    overflow: hidden;
-}
-.green2d{
-    position: absolute;
-    top: 135%;
-    left : 88%;
-    width: 10px;
-    height: 10px;
-    opacity: 50%;
-    overflow: hidden;
-}
-.green3d{
-    position: absolute;
-    top: 144%;
-    left : 85%;
-    width: 10px;
-    height: 10px;
-    opacity: 50%;
-    overflow: hidden;
-}
-.green4d{
-    position: absolute;
-    top: 142%;
-    left : 34%;
-    width: 10px;
-    height: 10px;
-    opacity: 50%;
-    overflow: hidden;
-}
-.green5d{
-    position: absolute;
-    top: 64%;
-    left : 42%;
-    width: 15px;
-    height: 15px;
-    opacity: 50%;
-    overflow: hidden;
-}
-.yellow1d{
-    position: absolute;
-    top: 52%;
-    left : 55%;
-    width: 10px;
-    height: 10px;
-    opacity: 50%;
-    overflow: hidden;
-}
-.yellow2d{
-    position: absolute;
-    top: 75%;
-    left : 38%;
-    width: 15px;
-    height: 15px;
-    opacity: 50%;
-    overflow: hidden;
-}
-.yellow3d{
-    position: absolute;
-    top: 55%;
-    left : 35%;
-    width: 10px;
-    height: 10px;
-    opacity: 50%;
-    overflow: hidden;
-}
-.yellow4d{
-    position: absolute;
-    top: 99%;
-    left : 58%;
-    width: 22px;
-    height: 22px;
-    opacity: 50%;
-    overflow: hidden;
-}
-.yellow5d{
-    position: absolute;
-    top: 160%;
-    left : 38%;
-    width: 25px;
-    height: 25px;
-    opacity: 50%;
-    overflow: hidden;
-}
-.yellow6d{
-    position: absolute;
-    top: 149%;
-    left : 72%;
-    width: 15px;
-    height: 15px;
-    opacity: 50%;
-    overflow: hidden;
-}
-.yellow7d{
-    position: absolute;
-    top: 130%;
-    left : 81%;
-    width: 20px;
-    height: 20px;
-    opacity: 50%;
-    overflow: hidden;
-}
-
-
-
 
 .sub-header{
     text-align: center;
@@ -408,6 +91,7 @@
     grid-template-columns: 50% 50%;
     justify-content: center;
     margin:50px;
+    height: 780px;
     margin-top: 40px;
     border-radius: 24px;
 }
@@ -485,11 +169,10 @@
     .box{
         grid-template-rows: 70% 30%;
         grid-template-columns: 100%;
-        height: 980px;
+        /*height: 980px;*/
         margin: 30px ;
         margin-top: 30px;
-        padding-bottom: 10px;
-        margin-bottom: 150px;
+        /*margin-bottom: 1000px;*/
     }
     .form-message{
         width: 280px;
