--- a/src/pages/Contact.css
+++ b/src/pages/Contact.css
@@ -90,10 +90,12 @@
     display: grid;
     grid-template-columns: 50% 50%;
     justify-content: center;
-    margin:50px;
-    height: 780px;
+    height: 770px;
     margin-top: 40px;
     border-radius: 24px;
+    margin-bottom: 100px;
+    margin-right: 80px;
+    margin-left: 60px;
 }
 .head{
     font-family: 'Montserrat', sans-serif;
@@ -169,9 +171,11 @@
     .box{
         grid-template-rows: 70% 30%;
         grid-template-columns: 100%;
-        /*height: 980px;*/
-        margin: 30px ;
-        margin-top: 30px;
+        width: 355px;
+        height: 1000px;
+        /*border: 1px solid black;*/
+        margin-left: 30px;
+        margin-bottom: 100px;
         /*margin-bottom: 1000px;*/
     }
     .form-message{
