--- a/src/pages/Contact.css
+++ b/src/pages/Contact.css
@@ -50,7 +50,7 @@
 }
 .greenR-d{
     position: absolute;
-    top: 82%;
+    top: 85%;
     left : 90%;
     width: 30px;
     height: 30px;
@@ -144,13 +144,51 @@
     }
    
 }
-@media screen and (min-width: 432px ){
+@media screen and (min-width: 432px ) and (max-width:850px){
+
+    
     .images-phone{
         display: none;
     }
+    .circle{
+        display: none;
+    }
+    .box-address{
+        display: none;
+    }
+    .box-image{
+        display: none;
+    }
+    .box{
+        box-shadow: none;
+        grid-template-rows: 70% 30%;
+        grid-template-columns: 100%;
+        height: 1000px;
+    }
+    .box-detail{
+        grid-template-rows: 0%  70% 30%;
+        
+    }
+    .form-message{
+        width: 280px;
+
+    }
+    .box-mail{
+        width: 135px;
+    }
+    .box-map{
+        margin: 10px;
+        margin-left: 80px;
+        width: 295px ;
+        height: 200px;
+        overflow: hidden;
+    }
+    .box-social{
+        margin-top: 250px;
+    }
 }
 
-@media screen and (max-width: 850px){
+@media screen and (max-width: 432px) and (min-width:0px){
     .header{
         font-size: 40px;
     }
@@ -169,6 +207,8 @@
     }
     .box-primary{
         height: 500px;
+        justify-content: center;
+        align-items: center;
     }
     .box{
         grid-template-rows: 70% 30%;
@@ -178,6 +218,7 @@
         /*border: 1px solid black;*/
         margin-left: 30px;
         margin-bottom: 100px;
+        box-shadow: none;
         /*margin-bottom: 1000px;*/
     }
     .form-message{
@@ -186,13 +227,6 @@
     }
     .box-mail{
         width: 135px;
-    }
-    .atRate{
-        width: 35px;
-    }
-
-    .mailid{
-        grid-template-columns: 47.5% 12.25% 20% ;
     }
     .inner-Box{
         margin: 10px;
