minor Home page updates

--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -21,7 +21,7 @@ body{
     /* height: 100%; */
     padding: 0 !important;
     overflow:hidden ;
-    border: 1px solid red;
+    /* border: 1px solid red; */
     /* background-image: url('../assets/images/home-bg.png'); */
 }
 
