--- a/src/styles/team.css
+++ b/src/styles/team.css
@@ -68,6 +68,16 @@
   width: 100%;
   opacity: 0.9;
 }
+.topcard {
+  display: none;
+  justify-content: center;
+  align-items: center;
+  margin: 20px auto;
+  padding: 0 23px;
+}
+.topcard-cont1 {
+  padding: 0 23px;
+}
 .headSm {
   max-width: 670px;
   min-width: 400px;
@@ -76,8 +86,8 @@
 .container1 {
   display: flex;
   flex-direction: row;
-  align-items: end;
-  justify-content: space-between;
+  align-items: flex-end;
+  justify-content: center;
   margin: 0 90px;
   margin-bottom: 30px;
 }
@@ -108,19 +118,24 @@
   display: none;
 }
 .cardend {
-  margin-top: 40px;
+  margin-top: 90px;
   display: none;
   padding: 0 23px;
 }
 .cardcenter {
   padding-bottom: 8px;
   padding: 0 23px;
+  display: none;
 }
 .bottom-div-col {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   padding: 8px 32px;
+}
+.bottom-card {
+  display: flex;
+  justify-content: center;
 }
 @media only screen and (min-width: 640px) {
   .cont1card {
@@ -131,9 +146,13 @@
     margin-top: 20px;
   }
   .cardcenter {
+    display: block;
     margin-top: 64px;
   }
   .bottom-div {
+    display: none;
+  }
+  .bottom-card {
     display: none;
   }
 }
@@ -147,6 +166,12 @@
   .cont1head {
     display: block;
     width: 66%;
+  }
+  .topcard {
+    display: flex;
+  }
+  .topcard-cont1 {
+    display: none;
   }
   .cardend {
     margin-top: 40px;
@@ -171,6 +196,9 @@
   }
   .vectorend {
     display: block;
+  }
+  .container1 {
+    justify-content: space-between;
   }
 }
 
